Introduce superclass for all tests