@@ -1,28 +1,10 @@
 package io.micronaut.gradle
 
-import org.gradle.testkit.runner.BuildResult
 import org.gradle.testkit.runner.GradleRunner
 import org.gradle.testkit.runner.TaskOutcome
-import org.gradle.testkit.runner.internal.DefaultGradleRunner
-import org.junit.Rule
-import org.junit.rules.TemporaryFolder
 import spock.lang.IgnoreIf
-import spock.lang.Specification
-import spock.util.environment.Jvm
 
-class MicronautLibraryPluginSpec extends Specification {
-
-    @Rule TemporaryFolder testProjectDir = new TemporaryFolder()
-
-    File settingsFile
-    File buildFile
-    File kotlinBuildFile
-
-    def setup() {
-        settingsFile = testProjectDir.newFile('settings.gradle')
-        buildFile = testProjectDir.newFile('build.gradle')
-        kotlinBuildFile = testProjectDir.newFile('build.gradle.kts')
-    }
+class MicronautLibraryPluginSpec extends AbstractGradleBuildSpec {
 
     def "test JUnit 5 platform excludes work"() {
         given:
@@ -70,7 +52,7 @@ class FooTest {
 """
 
         when:
-        def result = runGradle('test')
+        def result = build('test')
 
         then:
         result.task(":test").outcome == TaskOutcome.SUCCESS
@@ -142,7 +124,7 @@ class FooTest {
 """
 
         when:
-        def result = runGradle('test')
+        def result = build('test')
 
         then:
         result.task(":test").outcome == TaskOutcome.SUCCESS
@@ -191,7 +173,7 @@ public class Foo {
 """
 
         when:
-        def result = runGradle('assemble', "--stacktrace")
+        def result = build('assemble', "--stacktrace")
 
         then:
         result.task(":assemble").outcome == TaskOutcome.SUCCESS
@@ -248,7 +230,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('assemble')
+        def result = build('assemble')
 
         then:
         result.task(":assemble").outcome == TaskOutcome.SUCCESS
@@ -292,7 +274,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('assemble')
+        def result = build('assemble')
 
         then:
         result.task(":assemble").outcome == TaskOutcome.SUCCESS
@@ -339,7 +321,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('assemble')
+        def result = build('assemble')
 
         println result.output
         then:
@@ -392,7 +374,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('compileCustomKotlin')
+        def result = build('compileCustomKotlin')
 
         println result.output
         then:
@@ -442,7 +424,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('compileCustomJava')
+        def result = build('compileCustomJava')
 
         then:
         result.task(":compileCustomJava").outcome == TaskOutcome.SUCCESS
@@ -501,7 +483,7 @@ class Foo {
 """
 
         when:
-        def result = runGradle('test')
+        def result = build('test')
 
         then:
         result.task(":test").outcome == TaskOutcome.SUCCESS
@@ -553,7 +535,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('compileCustomGroovy')
+        def result = build('compileCustomGroovy')
 
         then:
         result.task(":compileCustomGroovy").outcome == TaskOutcome.SUCCESS
@@ -596,7 +578,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('assemble')
+        def result = build('assemble')
 
         then:
         result.task(":assemble").outcome == TaskOutcome.SUCCESS
@@ -649,7 +631,7 @@ class Foo {}
 """
 
         when:
-        def result = runGradle('assemble')
+        def result = build('assemble')
 
         then:
         result.task(":assemble").outcome == TaskOutcome.SUCCESS
@@ -658,19 +640,5 @@ class Foo {}
                 'build/classes/groovy/main/example/$FooDefinition.class'
         ).exists()
         result.output.contains("Generating OpenAPI Documentation")
-    }
-
-    private BuildResult runGradle(String... args) {
-        DefaultGradleRunner runner = ((DefaultGradleRunner) GradleRunner.create())
-        if (Jvm.current.java16Compatible) {
-            runner.withJvmArguments(
-                    '--illegal-access=permit',
-                    '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-            )
-        }
-        runner.withProjectDir(testProjectDir.root)
-              .withArguments(args)
-              .withPluginClasspath()
-              .build()
     }
 }
